# vario

./: .env_orig  .gitignore  README.md  TODO.md  platformio.ini
.github/workflows/: codeql-analysis.yml
.pio/libdeps/esp32devkit/Adafruit BMP280 Library/: .piopm
.pio/libdeps/esp32devkit/SparkFun u-blox GNSS Arduino Library/: .piopm
.pio/libdeps/gnss_only_test/SparkFun u-blox Arduino Library/: .piopm
bkp/: gps.hpp
devtools/: dashboard.json  docker-compose.yml
devtools/docker/prometheus/config/: prometheus.yml
devtools/insightsapi/: metrics.py  poetry.toml  pyproject.toml
lib/CopilotBarometer/: bmp280.cpp  bmp280.hpp
lib/CopilotGNSS/: gps.hpp  neo6m.cpp  neo6m.hpp
lib/CopilotSDCard/: CopilotSDCard.cpp  CopilotSDCard.h
lib/MPU6050/: MPU6050.cpp  MPU6050_9Axis_MotionApps41.cpp
lib/MPU6050/examples/IMU_Zero/: IMU_Zero.ino
lib/Messages/: CopilotMessages.hpp
src/: bmp280.h  bmp280.hpp  buzzer.cpp  buzzer.hpp  cache_barometer.hpp  cache_global.hpp  config.h  config.hpp  energia.hpp  gps copy.h  gps.hpp  main.cpp  mpu6050.cpp  mpu6050.hpp  network.hpp  queue.cpp  queue.hpp  screen.h  screen.hpp  secrets_template.hpp  utils.hpp
src/flight_companion/: bmp280.cpp  bmp280.hpp  buzzer.cpp  buzzer.hpp  cache_global.hpp  comm.hpp  config.hpp  copilot.cpp  copilot.hpp  energia.hpp  gps.hpp  mpu6050.cpp  mpu6050.hpp  neo6m.cpp  neo6m.hpp  network.hpp  queue.cpp  queue.hpp  screen.cpp  screen.hpp  secrets.hpp
src/flight_display/: display.cpp  display.hpp  queue.cpp  queue.hpp
src/model/: display_structures.hpp  espnow_message.hpp
test/: test_main.cpp
